total found news

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="flex-none gap-2">
               <div class="">
                 <ul class="flex text-textColor">
-                    <li><a href="#" class="mr-4">Home</a></li>
+                    <li><a href="#" class="mr-4">News</a></li>
                     <li><a href="#" class="mr-4">Blog</a></li>
                 </ul>
               </div>
