--- a/index.html
+++ b/index.html
@@ -115,6 +115,6 @@
         </section>
     </main>
     
-    <script src="./js/category.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
