--- a/index.html
+++ b/index.html
@@ -115,6 +115,21 @@
         </section>
     </main>
     
+    <script src="./js/common.js"></script>
     <script src="./js/script.js"></script>
+    <!-- modal -->
+    <!-- The button to open modal -->
+
+
+<!-- Put this part before </body> tag -->
+<input type="checkbox" id="my-modal-3" class="modal-toggle" />
+<div class="modal">
+  <div class="modal-box relative">
+    <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+    <h3 class="text-lg font-bold">Congratulations random Internet user!</h3>
+    <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p>
+  </div>
+</div>
+    <!-- modal -->
 </body>
 </html>
