--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@
     
     <script src="./js/common.js"></script>
     <script src="./js/script.js"></script>
-    <!-- modal -->
-    <!-- The button to open modal -->
+   
+   
 
-
-<!-- Put this part before </body> tag -->
+<!-- modal open -->
 <input type="checkbox" id="my-modal-3" class="modal-toggle" />
 <div class="modal">
   <div class="modal-box relative">
@@ -130,6 +129,6 @@
     <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p>
   </div>
 </div>
-    <!-- modal -->
+  <!-- modal -->
 </body>
 </html>
