add a modal for show author details

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
     <script src="./js/script.js"></script>
    
 
-<!-- modal open -->
+
+<!-- Put this part before </body> tag -->
 <input type="checkbox" id="my-modal-3" class="modal-toggle" />
 <div class="modal">
   <div class="modal-box relative">
@@ -130,6 +131,5 @@
     <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p>
   </div>
 </div>
-  <!-- modal -->
 </body>
 </html>
