sorting main array

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="flex-none ">
               <div>
                 <ul class="flex text-textColor text-sm">
-                    <li><a href="#" class="mr-4">News</a></li>
-                    <li><a href="#" class="mr-4">Blog</a></li>
+                    <li><a href="./index.html" class="mr-4 hover:text-red-600 hover:border-b-2 pb-1 hover:border-red-600">News</a></li>
+                    <li><a href="./blog.html" class="mr-4 hover:text-red-600 hover:border-b-2 pb-1 hover:border-red-600">Blog</a></li>
                 </ul>
               </div>
               <div class="dropdown dropdown-end">
@@ -66,8 +66,8 @@
             <div class="p-2 md:p-4 bg-white rounded-md">
                 <h3 class="tracking-wide text-lg"><span id="item-found">0</span> items found for category <span id="found-category">Entertainment</span></h3>
             </div>
-            <div class="py-8 md:flex justify-between">
-                <div class="flex items-center mb-4 md:mb-0">
+            <div class="py-8 md:flex text-center md:justify-between">
+                <div class="flex items-center mb-4 md:mb-0 justify-center">
                     <span class="mr-2 font-semibold text-textColor">Sort By View:</span>
                     <select name="" id=""  class="px-6 py-2 rounded-md  outline-none">
                         <option value="default">default</option>
@@ -83,7 +83,8 @@
           
           <h3 id="not-found" class="text-red-600 text-center text-3xl "></h3>
           <div id="spinner" class="text-center hidden">
-            <progress class="progress w-56 bg-violet-600 mb-20"></progress>
+            <div class="radial-progress text-white mb-20" style="--value:70;">70%</div>
+            <!-- <progress class="progress w-56 bg-violet-600 mb-20"></progress> -->
           </div>
             <div id="all-News-card">
              
