recheck all code

--- a/blog.html
+++ b/blog.html
@@ -41,42 +41,42 @@
         <div class="flex-none ">
           <div>
             <ul class="flex text-textColor text-sm">
-                <li><a href="./index.html" class="mr-4">News</a></li>
-                <li><a href="./blog.html" class="mr-4">Blog</a></li>
+                <li><a href="./index.html" class="mr-4 hover:text-red-500 hover:border-b-2 pb-1 hover:border-red-600">News</a></li>
+                <li><a href="./blog.html" class="mr-4 hover:text-red-500 hover:border-b-2 pb-1 hover:border-red-600">Blog</a></li>
             </ul>
           </div>
           <div class="dropdown dropdown-end">
             <label tabindex="0" class="btn btn-ghost btn-circle avatar">
               <div class="w-10 rounded-full border-2">
-                <img src="https://placeimg.com/80/80/people" />
+                <img src="./images/logo_n.png" />
               </div>
             </label>
           </div>
         </div>
-      </div>
+    </div>
 </header>
 <!-- header section end -->
-<main onclick="" class="px-5 md:px-28">
-    <section class="py-16">
+<main class="px-5 md:px-28">
+    <section class="md:py-16 py-5">
         <h3 class="text-white text-center text-3xl py-8 font-semibold">Questions</h3>
-        <div class="text-textColor w-8/12 m-auto">
-            <div class="border p-5 rounded-lg">
-                <h3 class="font-semibold text-xl">what is the difference between var let and const?</h3>
+        <div class="text-textColor w-full lg:w-8/12 m-auto">
+            <div class="border p-5 rounded-lg mb-1">
+                <h3 class="font-semibold text-xl text-white">What is the difference between var let and const?</h3>
                 <p><span>var : </span>It can be updated and re-declared into the scope.</p>
                 <p><span>let : </span>It can be updated but cannot be re-declared into the scope.</p>
                 <p><span>const : </span>It cannot be updated or re-declared into the scope.</p>
             </div>
-            <div class="border p-5 rounded-lg">
-                <h3 class="font-semibold text-xl">what is the difference between arrow functions and regular functions?</h3>
+            <div class="border p-5 rounded-lg mb-1">
+                <h3 class="font-semibold text-xl text-white">What is the difference between arrow functions and regular functions?</h3>
                 <p> Arrow function or an arrow function expression is a more concise syntax of writing regular function expressions that allows us to write shorter and neater functions.</p>
             </div>
-            <div class="border p-5 rounded-lg">
-                <h3 class="font-semibold text-xl">difference between map,forEach, filter,find method?</h3>
+            <div class="border p-5 rounded-lg mb-1">
+                <h3 class="font-semibold text-xl text-white">Difference between map,forEach, filter,find method?</h3>
                 <p><span> </span> The first difference between map() and forEach() is the returning value. The forEach() method returns undefined and map() returns a new array with the transformed elements. </p>
                 <p><span> </span> The find() method is used to find all the descendant elements of the selected element. It finds the element in the DOM tree by traversing through the root to leaf. The filter() method is used to filters all the elements and returns the element that matches and the element that do not match are removed</p>
             </div>
-            <div class="border p-5 rounded-lg">
-                <h3 class="font-semibold text-xl">why do we use template string in javascript</h3>
+            <div class="border p-5 rounded-lg ">
+                <h3 class="font-semibold text-xl text-white">Why do we use template string in javascript?</h3>
                 <p>Template literals provide an easy way to interpolate variables and expressions into strings. </p>
             </div>
 
