add padding in section

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         </section>
         <!-- all news card -->
         <section id="newscard" class="py-10">
-          <h3 id="not-found" class="text-red-600 text-center text-3xl "></h3>
-          <div id="spinner" class="text-center hidden">
+          <h3 id="not-found" class="text-red-600 text-center text-3xl py-20 hidden">Sorry, Not Found</h3>
+          <div id="spinner" class="text-center hidden py-10">
             <div class="radial-progress text-white mb-20" style="--value:70;">70%</div>
           </div>
           <div id="all-News-card">
